# Autonomous-AI-Software-Factory

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  architect.py  base.py  debugger.py  developer.py  devops.py  factory.py  reviewer.py
api/: dashboard.py  dependencies.py  main.py  routes.py
api/static/ui/: dashboard.css  dashboard.js
cli/: main.py
core/: config.py  container.py  events.py  security.py
domain/: models.py  ports.py
infrastructure/: cache.py  celery_app.py  database.py  git_service.py  github_client.py  metrics.py  orm.py  rate_limit.py  repositories.py  tasks.py
observability/: prometheus.yml
observability/grafana/provisioning/dashboard-definitions/: factory.json
observability/grafana/provisioning/dashboards/: dashboards.yml
orchestration/: pipeline.py  runtime.py
plugins/: __init__.py  loader.py  runner.py  sdk.py
services/: analyzer.py  git_workflow.py  project_generator.py  prompt_engine.py  self_improvement.py
tests/: test_analyzer_and_repair.py  test_dashboard_ui.py  test_git_runtime_and_failure.py  test_orchestration_e2e.py  test_plugins.py  test_project_generator.py  test_prompt_engine.py  test_security_core.py
